# ostep-projects

./: .gitignore
concurrency-mapreduce/: Cargo.toml  Makefile  comp_test.c
concurrency-mapreduce/src/: ccompat.rs  lib.rs  threadpool.rs
concurrency-pzip/: Makefile  README.md  make_test_file.sh  pzip.c  speed.sh
initial-utilities/wcat/: wcat.c
initial-utilities/wgrep/: wgrep.c
initial-utilities/wunzip/: wunzip.c
initial-utilities/wzip/: wzip.c
processes-shell/: 3wish.c  Makefile  README.md  wish.c
tester/: run-tests.sh
