[package]
name = "concurrency-mapreduce"
version = "0.1.0"
authors = ["Ian Wahbe <ian@wahbe.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]      # Creates dynamic lib
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
